--- a/ELE.web/WebRoot/WEB-INF/reports/CO-FT-458.jrxml
+++ b/ELE.web/WebRoot/WEB-INF/reports/CO-FT-458.jrxml
@@ -1,41 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="plantilla_CO_FT_189" language="groovy" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20">
-	<property name="ireport.zoom" value="1.210000000000005"/>
+	<property name="ireport.zoom" value="1.6105100000000077"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="508"/>
-	<parameter name="zona" class="java.lang.String">
-		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
-	</parameter>
-	<parameter name="nombreAccionante" class="java.lang.String">
-		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
-	</parameter>
-	<parameter name="resolucionNumero" class="java.lang.String">
-		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
-	</parameter>
-	<parameter name="argumento" class="java.lang.String">
-		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
-	</parameter>
-	<parameter name="decision" class="java.lang.String">
-		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
-	</parameter>
-	<parameter name="rutaImagen" class="java.lang.String">
-		<defaultValueExpression><![CDATA["D:\\JULIANA_NOBILE\\Proyectos\\ELECCIONES\\Formularios\\faltantes\\"]]></defaultValueExpression>
-	</parameter>
-	<parameter name="resolucion_mod" class="java.lang.String">
-		<defaultValueExpression><![CDATA["004"]]></defaultValueExpression>
-	</parameter>
-	<parameter name="nombre_presidente" class="java.lang.String">
-		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
-	</parameter>
-	<parameter name="nombre_secretario" class="java.lang.String">
-		<defaultValueExpression><![CDATA["Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."]]></defaultValueExpression>
-	</parameter>
-	<parameter name="resolucion" class="java.lang.String">
-		<defaultValueExpression><![CDATA["003"]]></defaultValueExpression>
-	</parameter>
-	<parameter name="fecha" class="java.util.Date">
-		<defaultValueExpression><![CDATA[]]></defaultValueExpression>
-	</parameter>
+	<property name="ireport.y" value="280"/>
+	<parameter name="zona" class="java.lang.String"/>
+	<parameter name="nombreAccionante" class="java.lang.String"/>
+	<parameter name="resolucionNumero" class="java.lang.String"/>
+	<parameter name="argumento" class="java.lang.String"/>
+	<parameter name="decision" class="java.lang.String"/>
+	<parameter name="rutaImagen" class="java.lang.String"/>
+	<parameter name="resolucion_mod" class="java.lang.String"/>
+	<parameter name="nombre_presidente" class="java.lang.String"/>
+	<parameter name="nombre_secretario" class="java.lang.String"/>
+	<parameter name="resolucion" class="java.lang.String"/>
+	<parameter name="fecha" class="java.util.Date"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -45,15 +23,15 @@
 				<reportElement x="-19" y="-18" width="593" height="88" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="125" y="16" width="311" height="37" forecolor="#FFFFFF"/>
-				<textElement textAlignment="Center">
-					<font size="14" isBold="true"/>
+				<reportElement x="0" y="29" width="555" height="24" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font size="13" isBold="true"/>
 				</textElement>
-				<text><![CDATA[RESOLUCION QUE RESULELVE RECURSO DE REPOSICIÓN FAVORABLEMENTE]]></text>
+				<text><![CDATA[RESOLUCIÓN QUE RESUELVE RECURSO DE REPOSICIÓN FAVORABLEMENTE]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="125" y="-4" width="311" height="20" forecolor="#FFFFFF"/>
-				<textElement textAlignment="Center">
+				<reportElement x="125" y="-4" width="311" height="23" forecolor="#FFFFFF"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[ELECCIÓN DE DELEGADOS]]></text>
@@ -69,64 +47,67 @@
 		</band>
 	</pageHeader>
 	<detail>
-		<band height="580">
+		<band height="555">
 			<staticText>
 				<reportElement x="42" y="70" width="314" height="20"/>
 				<textElement textAlignment="Left" verticalAlignment="Middle">
-					<font size="11" isBold="true"/>
+					<font size="11" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Análisis de los hechos presentados]]></text>
 			</staticText>
 			<rectangle>
 				<reportElement x="26" y="93" width="529" height="451" forecolor="#000000"/>
 			</rectangle>
-			<staticText>
-				<reportElement x="192" y="17" width="104" height="14"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
-				</textElement>
-				<text><![CDATA[Resolución N°]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="42" y="125" width="509" height="76"/>
-				<textElement lineSpacing="Single">
-					<font size="11"/>
-				</textElement>
-				<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="26" y="0" width="162" height="15" forecolor="#000000"/>
-				<textElement markup="none">
-					<font size="11" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Zonal Electoral No.]]></text>
-			</staticText>
+			<rectangle>
+				<reportElement mode="Transparent" x="26" y="32" width="529" height="34" forecolor="#000000"/>
+			</rectangle>
 			<rectangle>
 				<reportElement mode="Transparent" x="26" y="1" width="529" height="31" forecolor="#000000"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="414" y="34" width="41" height="14" forecolor="#000000"/>
+				<reportElement x="195" y="0" width="104" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Resolución N°]]></text>
+			</staticText>
+			<textField isBlankWhenNull="true">
+				<reportElement x="42" y="141" width="492" height="64"/>
+				<textElement lineSpacing="Single">
+					<font size="10"/>
+				</textElement>
+				<textFieldExpression class="java.lang.String"><![CDATA[$P{argumento}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="29" y="0" width="139" height="15" forecolor="#009232"/>
 				<textElement markup="none">
-					<font size="11" isBold="true"/>
+					<font size="10" isBold="false"/>
+				</textElement>
+				<text><![CDATA[Zonal Electoral No.]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="413" y="33" width="41" height="15" forecolor="#009232"/>
+				<textElement markup="none">
+					<font size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Fecha]]></text>
 			</staticText>
 			<textField pattern="yyyy/MM/dd" isBlankWhenNull="true">
-				<reportElement x="436" y="46" width="93" height="20"/>
+				<reportElement x="413" y="44" width="138" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font size="11"/>
+					<font size="12"/>
 				</textElement>
 				<textFieldExpression class="java.util.Date"><![CDATA[$P{fecha}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="267" y="34" width="141" height="28" forecolor="#000000"/>
+				<reportElement x="268" y="33" width="136" height="15" forecolor="#009232"/>
 				<textElement>
-					<font size="10" isBold="true"/>
+					<font size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Resolución Impugnada No.]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement x="265" y="46" width="138" height="20"/>
+				<reportElement x="265" y="44" width="138" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="false"/>
 				</textElement>
@@ -139,46 +120,43 @@
 				<reportElement x="191" y="1" width="1" height="31" forecolor="#000000"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="288" y="15" width="263" height="16"/>
+				<reportElement x="267" y="10" width="284" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{resolucionNumero}]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement x="26" y="45" width="239" height="21"/>
-				<textElement verticalAlignment="Bottom"/>
+				<reportElement x="26" y="44" width="239" height="20"/>
+				<textElement textAlignment="Center" verticalAlignment="Bottom"/>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{nombreAccionante}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="0" y="35" width="26" height="304"/>
-				<textElement rotation="Left">
+				<reportElement x="8" y="93" width="15" height="451" forecolor="#009232"/>
+				<textElement textAlignment="Center" rotation="Left">
 					<font size="8"/>
 				</textElement>
 				<text><![CDATA[Vigilado por la superintendencia de la Economia Solidaria NIT.:890.300.625-1]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="42" y="92" width="503" height="32"/>
+				<reportElement x="42" y="104" width="492" height="32"/>
 				<textElement textAlignment="Justified" lineSpacing="Single">
-					<font size="11" isBold="false"/>
+					<font size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Una vez revisados los hechos y argumentos planteados en el Recurso de Reposición, esta Comisión Electoral determinó procedente el argumento de:]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="26" y="31" width="239" height="14"/>
-				<textElement textAlignment="Center">
-					<font isBold="true"/>
+				<reportElement x="29" y="33" width="218" height="15" forecolor="#009232"/>
+				<textElement>
+					<font size="10" isBold="false"/>
 				</textElement>
 				<text><![CDATA[Accionante:  Nombre (s) y Apellido (s)]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="42" y="204" width="503" height="40"/>
+				<reportElement x="42" y="211" width="492" height="31"/>
 				<textElement>
-					<font size="11"/>
+					<font size="10"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA["Por lo tanto se repone y en consecuencia se modifica la Resolución No."+$P{resolucion_mod}+ ", la cual quedara así:"]]></textFieldExpression>
 			</textField>
-			<rectangle>
-				<reportElement mode="Transparent" x="26" y="32" width="529" height="34" forecolor="#000000"/>
-			</rectangle>
 			<line>
 				<reportElement x="265" y="32" width="1" height="34" forecolor="#000000"/>
 			</line>
@@ -203,21 +181,21 @@
 				<reportElement x="42" y="508" width="368" height="1" forecolor="#000000"/>
 			</line>
 			<textField isBlankWhenNull="true">
-				<reportElement x="42" y="246" width="503" height="81"/>
+				<reportElement x="42" y="249" width="492" height="81"/>
 				<textElement>
-					<font size="11" isBold="false"/>
+					<font size="10" isBold="false"/>
 				</textElement>
 				<textFieldExpression class="java.lang.String"><![CDATA[$P{decision}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="42" y="330" width="509" height="63"/>
+				<reportElement x="42" y="336" width="492" height="48"/>
 				<textElement lineSpacing="1_1_2">
-					<font size="11"/>
+					<font size="10"/>
 				</textElement>
 				<text><![CDATA[La presente Resolución será comunicada al interesado, a la dirección que tenga registrada en la Cooperativa, en su condición de asociado, de acuerdo con lo previsto en el Artículo 110 del Código Electoral.]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement x="26" y="15" width="162" height="17"/>
+				<reportElement x="26" y="10" width="162" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
 					<font size="11"/>
 				</textElement>
@@ -226,24 +204,24 @@
 		</band>
 	</detail>
 	<pageFooter>
-		<band height="92">
+		<band height="78">
 			<rectangle>
-				<reportElement x="-19" y="0" width="593" height="72" forecolor="#009232" backcolor="#009232"/>
+				<reportElement x="-18" y="1" width="593" height="46" forecolor="#009232" backcolor="#009232"/>
 			</rectangle>
 			<staticText>
-				<reportElement x="97" y="8" width="322" height="59" forecolor="#FFFFFF"/>
+				<reportElement x="0" y="6" width="555" height="35" forecolor="#FFFFFF"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
-					<font size="12" isBold="true"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Tribunal de Elecciones y Escrutinios]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="72" width="100" height="20"/>
+				<reportElement x="27" y="49" width="124" height="20" forecolor="#009232"/>
 				<textElement/>
 				<text><![CDATA[CO-FT-458]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="419" y="72" width="110" height="20"/>
+				<reportElement x="403" y="49" width="148" height="20" forecolor="#009232"/>
 				<textElement textAlignment="Right"/>
 				<text><![CDATA[Mod.Septiembre 2021]]></text>
 			</staticText>
